# polearm_src

./: README.MD  README.md
Arduino/Code_coba1/: Code_coba1.ino
Arduino/code_coba2/: code_coba2.ino
barcode_detection/: README.md  package.xml  setup.cfg  setup.py  testcam.py
barcode_detection/barcode_detection/: backup_node.py  dashboard_subscriber_node.py  multicam_barcode_node.py  nyoba.py  two_webcam_backup.py  two_webcam_node.py  webcam_node.py
barcode_detection/barcode_detection/install/: local_setup.sh  setup.sh
barcode_detection/barcode_detection/log/: latest_build
barcode_detection/launch/: camera_barcode_detection.launch.py
barcode_detection/results/: 20250608.csv  20250609.csv
barcode_hmi/: CMakeLists.txt  package.xml  setup.cfg  setup.py
barcode_hmi/barcode_hmi/: dummy_backend_node.py  hmi_ros_node.py  live_backend_backup.py  live_backend_node.py
barcode_interfaces/: CMakeLists.txt  package.xml
barcode_interfaces/msg/: BarcodeDetection.msg  CameraStatusArray.msg  SingleCameraStatus.msg
yolo/: package.xml  setup.py
yolo/Barcode_detection/: barcode_scanner.py
yolo/launch/: barcode_scanner.py
yolo/launch/install/: local_setup.sh  setup.sh
yolo/launch/log/: latest_build
